@@ -45,6 +45,9 @@ be the same as the device name on the target system.  Common names on
 Linux are "eth0", "eth1", ..., "ppp0", etc.  Other systems will have
 different naming rules.
 
+If you want to match all interfaces, you can specify "*" (without the
+quotes).
+
 .SS TARGET
 A \fItarget\fR notes what we do with a matching packet.  Universal
 options are \fIaccept\fR and \fIdrop\fR which, respectively, state
