@@ -1,4 +1,4 @@
-kind = UNRECOGNISED, spelling = "*", file = "(standard input)", line = 1
-kind = UNRECOGNISED, spelling = "*", file = "(standard input)", line = 1
-kind = UNRECOGNISED, spelling = "*", file = "(standard input)", line = 1
+kind = star, spelling = "*", file = "(standard input)", line = 1
+kind = star, spelling = "*", file = "(standard input)", line = 1
+kind = star, spelling = "*", file = "(standard input)", line = 1
 kind = slash, spelling = "/", file = "(standard input)", line = 1
